@@ -1,3 +1,10 @@
+2002-04-01  Kevin Kenny  <kennykb@acm.org>
+
+	* win/tclWinTime.c (Tcl_GetTime): made the checks of clock
+	frequency more permissive to cope with the fact that Win98SE
+	is observed to return 1.19318 in place of 1.193182 for the
+	performance counter frequency.
+	
 2002-03-29  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclCmdMZ.c (Tcl_TraceObjCmd, TraceVarProc)
